added promo and partners

--- a/app/index.html
+++ b/app/index.html
@@ -312,10 +312,7 @@
                 />
                 <div class="product-item__link-box">
                   <a class="product-item__link" href="#">
-                    <svg
-                      width="19px"
-                      height="20px"
-                    >
+                    <svg width="19px" height="20px">
                       <path
                         fill-rule="evenodd"
                         fill="rgb(41, 40, 45)"
@@ -323,11 +320,11 @@
                       />
                     </svg>
                   </a>
-                  <a class="product-item__link product-item__link--line" href="#">
-                    <svg
-                      width="16px"
-                      height="20px"
-                    >
+                  <a
+                    class="product-item__link product-item__link--line"
+                    href="#"
+                  >
+                    <svg width="16px" height="20px">
                       <path
                         fill-rule="evenodd"
                         fill="rgb(41, 40, 45)"
@@ -336,10 +333,7 @@
                     </svg>
                   </a>
                   <a class="product-item__link" href="#">
-                    <svg
-                      width="23px"
-                      height="20px"
-                    >
+                    <svg width="23px" height="20px">
                       <path
                         fill-rule="evenodd"
                         fill="rgb(41, 40, 45)"
@@ -349,18 +343,11 @@
                   </a>
                 </div>
               </div>
-              <div class="star" data-rateyo-rating="4">
-              </div>
-              <h4 class="product-item__title">
-                White Polo Men’s T-Shirt
-              </h4>
+              <div class="star" data-rateyo-rating="4"></div>
+              <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
               <div class="product-item__price">
-                <div class="product-item__price-new">
-                  $34.00
-                </div>
-                <div class="product-item__price-old">
-                  $27.00
-                </div>
+                <div class="product-item__price-new">$34.00</div>
+                <div class="product-item__price-old">$27.00</div>
               </div>
             </div>
             <div class="product-item product-item--sale">
@@ -372,10 +359,7 @@
                 />
                 <div class="product-item__link-box">
                   <a class="product-item__link" href="#">
-                    <svg
-                      width="19px"
-                      height="20px"
-                    >
+                    <svg width="19px" height="20px">
                       <path
                         fill-rule="evenodd"
                         fill="rgb(41, 40, 45)"
@@ -383,11 +367,11 @@
                       />
                     </svg>
                   </a>
-                  <a class="product-item__link product-item__link--line" href="#">
-                    <svg
-                      width="16px"
-                      height="20px"
-                    >
+                  <a
+                    class="product-item__link product-item__link--line"
+                    href="#"
+                  >
+                    <svg width="16px" height="20px">
                       <path
                         fill-rule="evenodd"
                         fill="rgb(41, 40, 45)"
@@ -396,10 +380,7 @@
                     </svg>
                   </a>
                   <a class="product-item__link" href="#">
-                    <svg
-                      width="23px"
-                      height="20px"
-                    >
+                    <svg width="23px" height="20px">
                       <path
                         fill-rule="evenodd"
                         fill="rgb(41, 40, 45)"
@@ -409,19 +390,11 @@
                   </a>
                 </div>
               </div>
-              <div class="star" data-rateyo-rating="4.5">
-
-              </div>
-              <h4 class="product-item__title">
-                White Polo Men’s T-Shirt
-              </h4>
+              <div class="star" data-rateyo-rating="4.5"></div>
+              <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
               <div class="product-item__price">
-                <div class="product-item__price-new">
-                  $34.00
-                </div>
-                <div class="product-item__price-old">
-                  $27.00
-                </div>
+                <div class="product-item__price-new">$34.00</div>
+                <div class="product-item__price-old">$27.00</div>
               </div>
             </div>
             <div class="product-item">
@@ -433,10 +406,7 @@
                 />
                 <div class="product-item__link-box">
                   <a class="product-item__link" href="#">
-                    <svg
-                      width="19px"
-                      height="20px"
-                    >
+                    <svg width="19px" height="20px">
                       <path
                         fill-rule="evenodd"
                         fill="rgb(41, 40, 45)"
@@ -444,11 +414,11 @@
                       />
                     </svg>
                   </a>
-                  <a class="product-item__link product-item__link--line" href="#">
-                    <svg
-                      width="16px"
-                      height="20px"
-                    >
+                  <a
+                    class="product-item__link product-item__link--line"
+                    href="#"
+                  >
+                    <svg width="16px" height="20px">
                       <path
                         fill-rule="evenodd"
                         fill="rgb(41, 40, 45)"
@@ -457,10 +427,7 @@
                     </svg>
                   </a>
                   <a class="product-item__link" href="#">
-                    <svg
-                      width="23px"
-                      height="20px"
-                    >
+                    <svg width="23px" height="20px">
                       <path
                         fill-rule="evenodd"
                         fill="rgb(41, 40, 45)"
@@ -470,19 +437,11 @@
                   </a>
                 </div>
               </div>
-              <div class="star" data-rateyo-rating="4.4">
-
-              </div>
-              <h4 class="product-item__title">
-                White Polo Men’s T-Shirt
-              </h4>
+              <div class="star" data-rateyo-rating="4.4"></div>
+              <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
               <div class="product-item__price">
-                <div class="product-item__price-new">
-                  $34.00
-                </div>
-                <div class="product-item__price-old">
-                  $27.00
-                </div>
+                <div class="product-item__price-new">$34.00</div>
+                <div class="product-item__price-old">$27.00</div>
               </div>
             </div>
             <div class="product-item product-item--sale">
@@ -494,10 +453,7 @@
                 />
                 <div class="product-item__link-box">
                   <a class="product-item__link" href="#">
-                    <svg
-                      width="19px"
-                      height="20px"
-                    >
+                    <svg width="19px" height="20px">
                       <path
                         fill-rule="evenodd"
                         fill="rgb(41, 40, 45)"
@@ -505,11 +461,11 @@
                       />
                     </svg>
                   </a>
-                  <a class="product-item__link product-item__link--line" href="#">
-                    <svg
-                      width="16px"
-                      height="20px"
-                    >
+                  <a
+                    class="product-item__link product-item__link--line"
+                    href="#"
+                  >
+                    <svg width="16px" height="20px">
                       <path
                         fill-rule="evenodd"
                         fill="rgb(41, 40, 45)"
@@ -518,10 +474,7 @@
                     </svg>
                   </a>
                   <a class="product-item__link" href="#">
-                    <svg
-                      width="23px"
-                      height="20px"
-                    >
+                    <svg width="23px" height="20px">
                       <path
                         fill-rule="evenodd"
                         fill="rgb(41, 40, 45)"
@@ -531,19 +484,11 @@
                   </a>
                 </div>
               </div>
-              <div class="star" data-rateyo-rating="5">
-
-              </div>
-              <h4 class="product-item__title">
-                White Polo Men’s T-Shirt
-              </h4>
+              <div class="star" data-rateyo-rating="5"></div>
+              <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
               <div class="product-item__price">
-                <div class="product-item__price-new">
-                  $34.00
-                </div>
-                <div class="product-item__price-old">
-                  $27.00
-                </div>
+                <div class="product-item__price-new">$34.00</div>
+                <div class="product-item__price-old">$27.00</div>
               </div>
             </div>
             <div class="product-item">
@@ -555,10 +500,7 @@
                 />
                 <div class="product-item__link-box">
                   <a class="product-item__link" href="#">
-                    <svg
-                      width="19px"
-                      height="20px"
-                    >
+                    <svg width="19px" height="20px">
                       <path
                         fill-rule="evenodd"
                         fill="rgb(41, 40, 45)"
@@ -566,11 +508,11 @@
                       />
                     </svg>
                   </a>
-                  <a class="product-item__link product-item__link--line" href="#">
-                    <svg
-                      width="16px"
-                      height="20px"
-                    >
+                  <a
+                    class="product-item__link product-item__link--line"
+                    href="#"
+                  >
+                    <svg width="16px" height="20px">
                       <path
                         fill-rule="evenodd"
                         fill="rgb(41, 40, 45)"
@@ -579,10 +521,7 @@
                     </svg>
                   </a>
                   <a class="product-item__link" href="#">
-                    <svg
-                      width="23px"
-                      height="20px"
-                    >
+                    <svg width="23px" height="20px">
                       <path
                         fill-rule="evenodd"
                         fill="rgb(41, 40, 45)"
@@ -592,19 +531,11 @@
                   </a>
                 </div>
               </div>
-              <div class="star" data-rateyo-rating="4">
-
-              </div>
-              <h4 class="product-item__title">
-                White Polo Men’s T-Shirt
-              </h4>
+              <div class="star" data-rateyo-rating="4"></div>
+              <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
               <div class="product-item__price">
-                <div class="product-item__price-new">
-                  $34.00
-                </div>
-                <div class="product-item__price-old">
-                  $27.00
-                </div>
+                <div class="product-item__price-new">$34.00</div>
+                <div class="product-item__price-old">$27.00</div>
               </div>
             </div>
             <div class="product-item product-item--sale">
@@ -616,10 +547,7 @@
                 />
                 <div class="product-item__link-box">
                   <a class="product-item__link" href="#">
-                    <svg
-                      width="19px"
-                      height="20px"
-                    >
+                    <svg width="19px" height="20px">
                       <path
                         fill-rule="evenodd"
                         fill="rgb(41, 40, 45)"
@@ -627,11 +555,11 @@
                       />
                     </svg>
                   </a>
-                  <a class="product-item__link product-item__link--line" href="#">
-                    <svg
-                      width="16px"
-                      height="20px"
-                    >
+                  <a
+                    class="product-item__link product-item__link--line"
+                    href="#"
+                  >
+                    <svg width="16px" height="20px">
                       <path
                         fill-rule="evenodd"
                         fill="rgb(41, 40, 45)"
@@ -640,10 +568,7 @@
                     </svg>
                   </a>
                   <a class="product-item__link" href="#">
-                    <svg
-                      width="23px"
-                      height="20px"
-                    >
+                    <svg width="23px" height="20px">
                       <path
                         fill-rule="evenodd"
                         fill="rgb(41, 40, 45)"
@@ -653,25 +578,70 @@
                   </a>
                 </div>
               </div>
-              <div class="star" data-rateyo-rating="3.5">
-
-              </div>
-              <h4 class="product-item__title">
-                White Polo Men’s T-Shirt
-              </h4>
+              <div class="star" data-rateyo-rating="3.5"></div>
+              <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
               <div class="product-item__price">
-                <div class="product-item__price-new">
-                  $34.00
-                </div>
-                <div class="product-item__price-old">
-                  $27.00
-                </div>
+                <div class="product-item__price-new">$34.00</div>
+                <div class="product-item__price-old">$27.00</div>
               </div>
             </div>
           </div>
           <a class="product__link" href="#">LOAD MORE</a>
         </div>
       </section>
+
+      <div class="promo">
+        <div class="container">
+          <div class="promo__inner">
+            <p class="promo__subtitle">Style Fashion</p>
+            <h3 class="title promo__title">DEAL OF THE DAY</h3>
+            <div class="promo__clock" data-time="'2022-05-25'">
+              <div class="promo__clock-item">
+                <span class="promo__days"></span>
+                <div class="promo__text">Days</div>
+              </div>
+              <div class="promo__clock-item">
+                <span class="promo__hours"></span>
+                <div class="promo__text">Hours</div>
+              </div>
+              <div class="promo__clock-item">
+                <span class="promo__minutes"></span>
+                <div class="promo__text">Minutes</div>
+              </div>
+              <div class="promo__clock-item">
+                <span class="promo__seconds"></span>
+                <div class="promo__text">Seconds</div>
+              </div>
+            </div>
+
+            <a class="promo__link" href="#">SHOP NOW</a>
+          </div>
+        </div>
+      </div>
+      <div class="partners">
+        <div class="container">
+          <ul class="partners__list">
+            <li class="partners__item">
+              <img src="images/partners/1.png" alt="partner logo" />
+            </li>
+            <li class="partners__item">
+              <img src="images/partners/2.png" alt="partner logo" />
+            </li>
+            <li class="partners__item">
+              <img src="images/partners/3.png" alt="partner logo" />
+            </li>
+            <li class="partners__item">
+              <img src="images/partners/4.png" alt="partner logo" />
+            </li>
+            <li class="partners__item">
+              <img src="images/partners/5.png" alt="partner logo" />
+            </li>
+            <li class="partners__item">
+              <img src="images/partners/6.png" alt="partner logo" />
+            </li>
+          </ul>
+        </div>
+      </div>
     </main>
 
     <footer class="footer">
