--- a/app/login.html
+++ b/app/login.html
@@ -46,14 +46,14 @@
             <a class="user-nav__link" href="">
               <img
                 class="user-nav__img"
-                src="images/icons/search.svg"
+                src="images/icons/search.png"
                 alt="search icon"
               />
             </a>
             <a class="user-nav__link" href="">
               <img
                 class="user-nav__img"
-                src="images/icons/heart.svg"
+                src="images/icons/heart.png"
                 alt="heart icon"
               />
               <span class="user-nav__num">3</span>
