--- a/app/index.html
+++ b/app/index.html
@@ -343,11 +343,22 @@
                   </a>
                 </div>
               </div>
-              <div class="star" data-rateyo-rating="4"></div>
-              <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
-              <div class="product-item__price">
-                <div class="product-item__price-new">$34.00</div>
-                <div class="product-item__price-old">$27.00</div>
+              <div class="product-item__wrapper-box">
+                <div class="product-item__box">
+                  <div class="star" data-rateyo-rating="3.5"></div>
+                  <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                  <div class="product-item__price">
+                    <div class="product-item__price-new">$34.00</div>
+                    <div class="product-item__price-old">$27.00</div>
+                  </div>
+                </div>
+                <div class="product-item__content-box">
+                  <p class="product-item__text">
+                    Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod
+                    utlitoi labore et dolore magna aliqua.
+                  </p>
+                  <button class="product-item__btn">Add to cart</button>
+                </div>
               </div>
             </div>
             <div class="product-item product-item--sale">
@@ -390,11 +401,22 @@
                   </a>
                 </div>
               </div>
-              <div class="star" data-rateyo-rating="4.5"></div>
-              <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
-              <div class="product-item__price">
-                <div class="product-item__price-new">$34.00</div>
-                <div class="product-item__price-old">$27.00</div>
+              <div class="product-item__wrapper-box">
+                <div class="product-item__box">
+                  <div class="star" data-rateyo-rating="4.5"></div>
+                  <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                  <div class="product-item__price">
+                    <div class="product-item__price-new">$34.00</div>
+                    <div class="product-item__price-old">$27.00</div>
+                  </div>
+                </div>
+                <div class="product-item__content-box">
+                  <p class="product-item__text">
+                    Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod
+                    utlitoi labore et dolore magna aliqua.
+                  </p>
+                  <button class="product-item__btn">Add to cart</button>
+                </div>
               </div>
             </div>
             <div class="product-item">
@@ -437,11 +459,22 @@
                   </a>
                 </div>
               </div>
-              <div class="star" data-rateyo-rating="4.4"></div>
-              <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
-              <div class="product-item__price">
-                <div class="product-item__price-new">$34.00</div>
-                <div class="product-item__price-old">$27.00</div>
+              <div class="product-item__wrapper-box">
+                <div class="product-item__box">
+                  <div class="star" data-rateyo-rating="4.5"></div>
+                  <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                  <div class="product-item__price">
+                    <div class="product-item__price-new">$34.00</div>
+                    <div class="product-item__price-old">$27.00</div>
+                  </div>
+                </div>
+                <div class="product-item__content-box">
+                  <p class="product-item__text">
+                    Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod
+                    utlitoi labore et dolore magna aliqua.
+                  </p>
+                  <button class="product-item__btn">Add to cart</button>
+                </div>
               </div>
             </div>
             <div class="product-item product-item--sale">
@@ -484,11 +517,22 @@
                   </a>
                 </div>
               </div>
-              <div class="star" data-rateyo-rating="5"></div>
-              <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
-              <div class="product-item__price">
-                <div class="product-item__price-new">$34.00</div>
-                <div class="product-item__price-old">$27.00</div>
+              <div class="product-item__wrapper-box">
+                <div class="product-item__box">
+                  <div class="star" data-rateyo-rating="4.1"></div>
+                  <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                  <div class="product-item__price">
+                    <div class="product-item__price-new">$34.00</div>
+                    <div class="product-item__price-old">$27.00</div>
+                  </div>
+                </div>
+                <div class="product-item__content-box">
+                  <p class="product-item__text">
+                    Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod
+                    utlitoi labore et dolore magna aliqua.
+                  </p>
+                  <button class="product-item__btn">Add to cart</button>
+                </div>
               </div>
             </div>
             <div class="product-item">
@@ -531,11 +575,22 @@
                   </a>
                 </div>
               </div>
-              <div class="star" data-rateyo-rating="4"></div>
-              <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
-              <div class="product-item__price">
-                <div class="product-item__price-new">$34.00</div>
-                <div class="product-item__price-old">$27.00</div>
+              <div class="product-item__wrapper-box">
+                <div class="product-item__box">
+                  <div class="star" data-rateyo-rating="4"></div>
+                  <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                  <div class="product-item__price">
+                    <div class="product-item__price-new">$34.00</div>
+                    <div class="product-item__price-old">$27.00</div>
+                  </div>
+                </div>
+                <div class="product-item__content-box">
+                  <p class="product-item__text">
+                    Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod
+                    utlitoi labore et dolore magna aliqua.
+                  </p>
+                  <button class="product-item__btn">Add to cart</button>
+                </div>
               </div>
             </div>
             <div class="product-item product-item--sale">
@@ -578,11 +633,22 @@
                   </a>
                 </div>
               </div>
-              <div class="star" data-rateyo-rating="3.5"></div>
-              <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
-              <div class="product-item__price">
-                <div class="product-item__price-new">$34.00</div>
-                <div class="product-item__price-old">$27.00</div>
+              <div class="product-item__wrapper-box">
+                <div class="product-item__box">
+                  <div class="star" data-rateyo-rating="3.5"></div>
+                  <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
+                  <div class="product-item__price">
+                    <div class="product-item__price-new">$34.00</div>
+                    <div class="product-item__price-old">$27.00</div>
+                  </div>
+                </div>
+                <div class="product-item__content-box">
+                  <p class="product-item__text">
+                    Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod
+                    utlitoi labore et dolore magna aliqua.
+                  </p>
+                  <button class="product-item__btn">Add to cart</button>
+                </div>
               </div>
             </div>
           </div>
@@ -674,23 +740,16 @@
               </a>
               <div class="blog__item-box">
                 <div class="blog__item-info">
-                  <a class="blog__item-author" href="#">
-                    By Admin
-                  </a>
-                  <p class="blog__item-date">
-                    10 January, 2020
-                  </p>
+                  <a class="blog__item-author" href="#"> By Admin </a>
+                  <p class="blog__item-date">10 January, 2020</p>
                 </div>
                 <a class="blog__item-titlelink" href="#">
                   <h4 class="blog__item-title">
                     Our Apps User Use Mobile On His Mobile
                   </h4>
                 </a>
-                <a class="blog__item-link" href="#">
-                  Read More
-                </a>
+                <a class="blog__item-link" href="#"> Read More </a>
               </div>
-              
             </div>
             <div class="blog__item">
               <a class="blog__item-imglink" href="#">
@@ -698,21 +757,15 @@
               </a>
               <div class="blog__item-box">
                 <div class="blog__item-info">
-                  <a class="blog__item-author" href="#">
-                    By Admin
-                  </a>
-                  <p class="blog__item-date">
-                    10 January, 2020
-                  </p>
+                  <a class="blog__item-author" href="#"> By Admin </a>
+                  <p class="blog__item-date">10 January, 2020</p>
                 </div>
                 <a class="blog__item-titlelink" href="#">
                   <h4 class="blog__item-title">
                     Our Apps User Use Mobile On His Mobile
                   </h4>
                 </a>
-                <a class="blog__item-link" href="#">
-                  Read More
-                </a>
+                <a class="blog__item-link" href="#"> Read More </a>
               </div>
             </div>
           </div>
