added product page

--- a/app/shop.html
+++ b/app/shop.html
@@ -980,7 +980,6 @@
                     </div>
                   </div>
                 </div>
-                
               </div>
 
               <div class="pagination">
@@ -988,13 +987,27 @@
                   PREVIOUS
                 </a>
                 <ul class="pagination__list">
-                  <li class="pagination__item"><a class="pagination__link" href="#">1</a></li>
-                  <li class="pagination__item"><a class="pagination__link" href="#">2</a></li>
-                  <li class="pagination__item"><a class="pagination__link pagination__link--active" href="#">3</a></li>
-                  <li class="pagination__item"><span class="pagination__link" >....</span></li>
-                  <li class="pagination__item"><a class="pagination__link" href="#">10</a></li>
-                </ul>  
-                
+                  <li class="pagination__item">
+                    <a class="pagination__link" href="#">1</a>
+                  </li>
+                  <li class="pagination__item">
+                    <a class="pagination__link" href="#">2</a>
+                  </li>
+                  <li class="pagination__item">
+                    <a
+                      class="pagination__link pagination__link--active"
+                      href="#"
+                      >3</a
+                    >
+                  </li>
+                  <li class="pagination__item">
+                    <span class="pagination__link">....</span>
+                  </li>
+                  <li class="pagination__item">
+                    <a class="pagination__link" href="#">10</a>
+                  </li>
+                </ul>
+
                 <a class="pagination__arrows pagination__next" href="#">
                   NEXT
                 </a>
