--- a/app/index.html
+++ b/app/index.html
@@ -721,10 +721,10 @@
                 <img class="blog__img" src="images/blog/1.jpg" alt="" />
               </a>
 
-              <div class="blog__item-box">
-                <div class="blog__item-info">
-                  <a class="blog__item-author" href="#"> By Admin </a>
-                  <p class="blog__item-date">10 January, 2020</p>
+              <div class="blog__item-box ">
+                <div class=" blog-box">
+                  <a class=" blog-box__author" href="#"> By Admin </a>
+                  <p class=" blog-box__date">10 January, 2020</p>
                 </div>
                 <a class="blog__item-titlelink" href="#">
                   <h4 class="blog__item-title">
@@ -739,9 +739,9 @@
                 <img class="blog__img" src="images/blog/2.jpg" alt="" />
               </a>
               <div class="blog__item-box">
-                <div class="blog__item-info">
-                  <a class="blog__item-author" href="#"> By Admin </a>
-                  <p class="blog__item-date">10 January, 2020</p>
+                <div class=" blog-box">
+                  <a class=" blog-box__author" href="#"> By Admin </a>
+                  <p class=" blog-box__date">10 January, 2020</p>
                 </div>
                 <a class="blog__item-titlelink" href="#">
                   <h4 class="blog__item-title">
@@ -756,9 +756,9 @@
                 <img class="blog__img" src="images/blog/3.jpg" alt="" />
               </a>
               <div class="blog__item-box">
-                <div class="blog__item-info">
-                  <a class="blog__item-author" href="#"> By Admin </a>
-                  <p class="blog__item-date">10 January, 2020</p>
+                <div class=" blog-box">
+                  <a class=" blog-box__author" href="#"> By Admin </a>
+                  <p class=" blog-box__date">10 January, 2020</p>
                 </div>
                 <a class="blog__item-titlelink" href="#">
                   <h4 class="blog__item-title">
