--- a/app/page-404.html
+++ b/app/page-404.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.min.css" />
+    <link rel="stylesheet" href="css/page-404.min.css" />
   </head>
   <body>
-    <header class="header header--404-page">
+    <header class="header">
       <div class="container">
         <div class="header__inner">
           <a class="logo" href="#">
@@ -284,6 +284,7 @@
         </div>
       </div>
     </footer>
+
 
     <script src="js/main.min.js"></script>
   </body>
