--- a/app/login.html
+++ b/app/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.min.css" />
+    <link rel="stylesheet" href="css/login.min.css" />
   </head>
   <body>
     <header class="header">
@@ -72,7 +72,7 @@
     </header>
 
     <main class="main">
-      <section class="top">
+         <section class="top">
         <div class="top__container" style="background-image: url('../images/top-bg.jpg');">
           <div class="container">
             <h2 class="top__title title">
@@ -95,6 +95,7 @@
           </div>
         </div>
       </section>
+     
       <section class="modal">
         <div class="container">
           <div class="modal__links">
@@ -120,6 +121,8 @@
         </div>
       </section>
     </main>
+
+    
 
     <footer class="footer">
       <div class="container">
@@ -315,6 +318,7 @@
         </div>
       </div>
     </footer>
+
 
     <script src="js/main.min.js"></script>
   </body>
