--- a/app/page.html
+++ b/app/page.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.min.css" />
+    <link rel="stylesheet" href="css/page.min.css" />
   </head>
   <body>
     <header class="header">
@@ -72,7 +72,7 @@
     </header>
 
     <main class="main">
-      <section class="top">
+         <section class="top">
         <div class="top__container" style="background-image: url('../images/top-bg.jpg');">
           <div class="container">
             <h2 class="top__title title">
@@ -291,6 +291,7 @@
         </div>
       </div>
     </footer>
+
 
     <script src="js/main.min.js"></script>
   </body>
