--- a/app/register.html
+++ b/app/register.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.min.css" />
+    <link rel="stylesheet" href="css/register.min.css" />
   </head>
   <body>
     <header class="header">
@@ -72,11 +72,11 @@
     </header>
 
     <main class="main">
-      <section class="top">
+         <section class="top">
         <div class="top__container" style="background-image: url('../images/top-bg.jpg');">
           <div class="container">
             <h2 class="top__title title">
-              REGISTER
+              LOG IN
             </h2>
             <div class="breadcrumbs">
               <ul class="breadcrumbs__list">
@@ -87,7 +87,7 @@
                 </li>
                 <li class="breadcrumbs__item">
                   <a class="breadcrumbs__link" href="#">
-                    Register
+                    Log in
                   </a>
                 </li>
               </ul>
@@ -316,6 +316,7 @@
         </div>
       </div>
     </footer>
+
 
     <script src="js/main.min.js"></script>
   </body>
