added adaptive index

--- a/app/blog.html
+++ b/app/blog.html
@@ -15,6 +15,9 @@
             <img class="logo__img" src="images/logo.png" alt="logo" />
           </a>
           <nav class="menu">
+            <button class="menu__btn">
+              <span></span>
+            </button>
             <ul class="menu__list">
               <li class="menu__list-item">
                 <a class="menu__list-link menu__list-link--active" href="#"
@@ -562,7 +565,7 @@
             </ul>
           </div>
           <div class="footer-top__item footer-top__nav">
-            <h6 class="footer-top__title">Useful Links</h6>
+            <h6 class="footer-top__title footer-top__title-slide">Useful Links</h6>
             <ul class="footer-top__list">
               <li class="footer-top__item">
                 <a class="footer-top__link" href="#"> About Us </a>
@@ -582,7 +585,7 @@
             </ul>
           </div>
           <div class="footer-top__item footer-top__nav">
-            <h6 class="footer-top__title">My Account</h6>
+            <h6 class="footer-top__title footer-top__title-slide">My Account</h6>
             <ul class="footer-top__list">
               <li class="footer-top__item">
                 <a class="footer-top__link" href="#"> My Account </a>
@@ -602,7 +605,7 @@
             </ul>
           </div>
           <div class="footer-top__item footer-top__item-form">
-            <h6 class="footer-top__title">Subscribe Our Newsletter</h6>
+            <h6 class="footer-top__title ">Subscribe Our Newsletter</h6>
             <p class="footer-top__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
