--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,9 @@
             <img class="logo__img" src="images/logo.png" alt="logo" />
           </a>
           <nav class="menu">
+            <button class="menu__btn">
+              <span></span>
+            </button>
             <ul class="menu__list">
               <li class="menu__list-item">
                 <a class="menu__list-link menu__list-link--active" href="#"
@@ -73,6 +76,7 @@
     </header>
 
     <main class="main">
+
       <section class="top-slider">
         <div class="container top-slider__container">
           <div class="top-slider__inner">
@@ -778,9 +782,7 @@
           </div>
         </div>
       </section>
-
-      
-      
+   
     </main>
 
     <footer class="footer">
@@ -893,7 +895,7 @@
             </ul>
           </div>
           <div class="footer-top__item footer-top__nav">
-            <h6 class="footer-top__title">Useful Links</h6>
+            <h6 class="footer-top__title footer-top__title-slide">Useful Links</h6>
             <ul class="footer-top__list">
               <li class="footer-top__item">
                 <a class="footer-top__link" href="#"> About Us </a>
@@ -913,7 +915,7 @@
             </ul>
           </div>
           <div class="footer-top__item footer-top__nav">
-            <h6 class="footer-top__title">My Account</h6>
+            <h6 class="footer-top__title footer-top__title-slide">My Account</h6>
             <ul class="footer-top__list">
               <li class="footer-top__item">
                 <a class="footer-top__link" href="#"> My Account </a>
@@ -933,7 +935,7 @@
             </ul>
           </div>
           <div class="footer-top__item footer-top__item-form">
-            <h6 class="footer-top__title">Subscribe Our Newsletter</h6>
+            <h6 class="footer-top__title ">Subscribe Our Newsletter</h6>
             <p class="footer-top__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
