--- a/app/module/_footer/_footer.html
+++ b/app/module/_footer/_footer.html
@@ -108,7 +108,7 @@
             </ul>
           </div>
           <div class="footer-top__item footer-top__nav">
-            <h6 class="footer-top__title">Useful Links</h6>
+            <h6 class="footer-top__title footer-top__title-slide">Useful Links</h6>
             <ul class="footer-top__list">
               <li class="footer-top__item">
                 <a class="footer-top__link" href="#"> About Us </a>
@@ -128,7 +128,7 @@
             </ul>
           </div>
           <div class="footer-top__item footer-top__nav">
-            <h6 class="footer-top__title">My Account</h6>
+            <h6 class="footer-top__title footer-top__title-slide">My Account</h6>
             <ul class="footer-top__list">
               <li class="footer-top__item">
                 <a class="footer-top__link" href="#"> My Account </a>
@@ -148,7 +148,7 @@
             </ul>
           </div>
           <div class="footer-top__item footer-top__item-form">
-            <h6 class="footer-top__title">Subscribe Our Newsletter</h6>
+            <h6 class="footer-top__title ">Subscribe Our Newsletter</h6>
             <p class="footer-top__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
