--- a/app/blog-one.html
+++ b/app/blog-one.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog by Goshan</title>
     <link rel="stylesheet" href="css/blog-one.min.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
     
