--- a/app/product.html
+++ b/app/product.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ProductByGosha</title>
     <link rel="stylesheet" href="css/product.min.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
     <header class="header">
@@ -75,26 +76,31 @@
     </header>
 
     <main class="main">
-      <section class="top">
-        <div
-          class="top__container"
-          style="background-image: url('../images/top-bg.jpg')"
-        >
+      
+         <section class="top">
+        <div class="top__container" style="background-image: url('../images/top-bg.jpg');">
           <div class="container">
-            <h2 class="top__title title">Product</h2>
+            <h2 class="top__title title">
+              LOG IN
+            </h2>
             <div class="breadcrumbs">
               <ul class="breadcrumbs__list">
                 <li class="breadcrumbs__item">
-                  <a class="breadcrumbs__link" href="#"> Home </a>
+                  <a class="breadcrumbs__link" href="#">
+                    Home
+                  </a>
                 </li>
                 <li class="breadcrumbs__item">
-                  <a class="breadcrumbs__link" href="#"> Product </a>
+                  <a class="breadcrumbs__link" href="#">
+                    Log in
+                  </a>
                 </li>
               </ul>
             </div>
           </div>
         </div>
       </section>
+
       <section class="product-page">
         <div class="container">
           <div class="product-one">
